# FreedomCrypt

./: CMakeLists.txt
src/: common_qml_plugin.h  main.cc  resources.qrc
src/qml/: Center.qml  CustomButton.qml  CustomSliderStyle.qml  CustomTableViewStyle.qml  Footer.qml  Header.qml  Login.qml  MainUI.qml  main.qml
